2010-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: fro_move

	* b-fro.c (fro_bob): Delete func.
	(fro_move): New func.
	* b-fro.h (fro_bob): Convert from func decl to macro.
	(fro_move): New func decl.

2010-05-20  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move some funcs out of rcssyn.c to rcsedit.c.

	* rcssyn.c (unexpected_EOF, initdiffcmd, badDiffOutput)
	(diffLineNumberTooLarge, getdiffcmd): Move funcs from here...
	* rcsedit.c: #include <ctype.h>.
	(unexpected_EOF, initdiffcmd, badDiffOutput)
	(diffLineNumberTooLarge, getdiffcmd): ...to here.
	* base.h: Reorder func decls; nfc.

2010-05-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘?:’ more.

	* rlog.c (putadelta): Use ‘?:’ instead of ‘if’ statement.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: SYNTAX_ERROR

	* b-complain.c (fatal_syntax): Take line number as first arg.
	* b-complain.h (fatal_syntax): Update func decl.
	(SYNTAX_ERROR): New macro.
	* b-fro.c: Do g/fatal_syntax/SYNTAX_ERROR/g.
	* rcsedit.c: Likewise.
	* rcsgen.c: Likewise.
	* rcslex.c: Likewise.
	* rcssyn.c: Likewise.
	* rlog.c: Likewise.
	* yarrrr.c: Likewise.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move ‘LEX (erroneousp)’ to ‘FLOW (erroneousp)’.

	* base.h (struct parse_state): Move member ‘erroneousp’ from here...
	(struct flow): ...to here.
	* b-complain.c: Do s/LEX (erroneousp)/FLOW (erroneousp)/g.
	* ci.c: Likewise.
	* co.c: Likewise.
	* merge.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsedit.c: Likewise.
	* rcskeep.c: Likewise.
	* rcslex.c: Likewise.
	* rcsmerge.c: Likewise.
	* rlog.c: Likewise.

2010-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int org] Move some funcs out of rcslex.c to rcsmap.c.

	* rcslex.c (checkidentifier, checkid, checksym, checksid)
	(checkssym): Move funcs from here...
	* rcsmap.c (checkidentifier, checkid, checksym, checksid)
	(checkssym): ...to here.