@@ -51,7 +51,6 @@ extern off_t fro_tello (struct fro *f);
 extern void fro_move (struct fro *f, off_t change);
 extern bool fro_try_getbyte (int *c, struct fro *f);
 extern void fro_must_getbyte (int *c, struct fro *f);
-extern void fro_get_prev_byte (int *c, struct fro *f);
 extern void fro_trundling (bool sequentialp, struct fro *f);
 extern void fro_spew_partial (FILE *to, struct fro *f, struct range *r);
 extern void fro_spew (struct fro *f, FILE *to);
